--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
       <button id="join">join</button>
       <button id="leave">leave</button>
     </div>
-    <video id="local-video" width="400px" muted playsinline></video>
     <div id="button-area"></div>
     <div id="remote-media-area"></div>
     <script src="https://cdn.jsdelivr.net/npm/@skyway-sdk/room/dist/skyway_room-latest.js"></script>
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="rec-main.js"></script>
   </body>
 </html>
