--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <div id="remote-media-area"></div>
     <script src="https://cdn.jsdelivr.net/npm/@skyway-sdk/room/dist/skyway_room-latest.js"></script>
 
-    <script type="module" src="rec-main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
