--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <p>ID: <span id="my-id"></span></p>
     <div>
-      room name: <input id="room-name" type="text" />
+      room name: ADMIN-CALL
       <button id="join">join</button>
       <button id="leave">leave</button>
     </div>
