--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>SkyWay Tutorial</title>
   </head>
   <body>
-    <p>ID: <span id="my-id"></span></p>
+    <p>ID: <span id="my-id">TAXIREADER-ADMIN</span></p>
     <div>
       room name: ADMIN-CALL
       <button id="join">join</button>
